--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,6 +19,13 @@
 
 			<a href="https://github.com/Chris-hfu/Softwaredesign" target="_blank">Repository</A><br>
 			<hr>
+			<a href="https://github.com/Chris-hfu/Softwaredesign/blob/master/Aufgabe10/Program.cs" target="_blank">Aufgabe10 - Code 19.12.2018
+			</A><br>
+			<a href="https://chris-hfu.github.io/Softwaredesign/Aufgabe10/class.jpg" target="_blank">Aufgabe10 - Klassendiagram 19.12.2018
+			</A><br>
+			<a href="https://chris-hfu.github.io/Softwaredesign/Aufgabe10/activity.jpg" target="_blank">Aufgabe10 - Aktivitätsdiagram 19.12.2018
+			</A><br>
+			
 			<a href="https://github.com/Chris-hfu/Softwaredesign/blob/master/Aufgabe09/" target="_blank">Aufgabe9 - Code 16.12.2018
 			</A><br><br>
 			<a href="https://github.com/Chris-hfu/Softwaredesign/blob/master/Aufgabe08/" target="_blank">Aufgabe8 - Code 9.12.2018
