--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,6 +19,8 @@
 
 			<a href="https://github.com/Chris-hfu/Softwaredesign" target="_blank">Repository</A><br>
 			<hr>
+			<a href="https://github.com/Chris-hfu/Softwaredesign/blob/master/Aufgabe11/" target="_blank">DesignPatterns - Code 9.01.2019
+			</A><br><br>
 			<a href="https://github.com/Chris-hfu/Softwaredesign/blob/master/Aufgabe10/Program.cs" target="_blank">Aufgabe10 - Code 19.12.2018
 			</A><br>
 			<a href="https://chris-hfu.github.io/Softwaredesign/Aufgabe10/class.jpg" target="_blank">Aufgabe10 - Klassendiagram 19.12.2018
